test/pos/conj-rhs.msmt_
; Uninterpreted Sorts
(declare-sort List 1)


; Constants


; Distinct Constants


; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


; Horn Constraints
(constraint (forall ((v1 Int)) (=> True (and (< 0 1) (> 1 0)))))
