test/neg/hex00.msmt_
; Uninterpreted Sorts
(declare-sort List 1)


; Constants


; Distinct Constants


; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


; Horn Constraints
(constraint (forall ((a Int)(b Int)(v1 Int)) (=> (and (= a 8) (and (= b 7) (= v1 (+ a b)))) (= v1 12))))
